Migrate off constructors of boxed primitive types.
The constructors became [deprecated for
removal](https://bugs.openjdk.org/browse/JDK-8254324) in [JDK
16](https://docs.oracle.com/en/java/javase/16/docs/api/java.base/java/lang/Integer.html#%3Cinit%3E(int)).